discription of nature

--- a/Muine_Main.html
+++ b/Muine_Main.html
@@ -21,5 +21,7 @@
     <p>Если вы во Вьетнаме вас окружает великолепная природа, буддисткие храмы и сифуд.
         Муйне в этом плане не станет исключением.</p>
         <h3>Природа</h3>
-        <p>Тут я расскажу о природе</p>
+        <p>Разумеется, пальмы, море, волны. Помимо моря из природы есть белые и красные печаные дюны.
+            За небольшие деньги вы можете поехать на экскурсионном автобусе или арендованном байке в множество красивых мест:
+        </p>
 </html>
