--- a/Muine_Main.html
+++ b/Muine_Main.html
@@ -18,10 +18,24 @@
     </p>
     <h1>Плюсы</h1>
     <h2>Достопримечательности</h2>
-    <p>Если вы во Вьетнаме вас окружает великолепная природа, буддисткие храмы и сифуд.
-        Муйне в этом плане не станет исключением.</p>
-        <h3>Природа</h3>
-        <p>Разумеется, пальмы, море, волны. Помимо моря из природы есть белые и красные печаные дюны.
-            За небольшие деньги вы можете поехать на экскурсионном автобусе или арендованном байке в множество красивых мест:
-        </p>
+    <p>По близости
+        <ul>
+           <li>Белые и красные песчаные дюны</li>
+           <li>Пляж Хон Ром</li>
+           <li>Волнорез</li>
+           <li>Чамские башни Пошану</li>
+           <li>Рыбацкая деревня</li>
+           <li>Ручей фей</li>
+        </ul>
+    </p>
+    <p>Можно съездить на мопеде или на экскурсию
+        <ul>
+            <li>Гора таку и статуя лежачего Будды</li>
+            <li>Город Нячанг</li>
+            <li>Город "Вечной весны" Далат, расположенный в горах</li>
+            <li>Баолок: водопады Дамбри и Дасара</li>
+            <li>Бухта Виньхи</li>
+            <li>Сайгон + Меконг + тунели Кучи(лучше всего перед вылетом)</li>
+        </ul>
+    </p>
 </html>
