Discription of dosug, people, job

--- a/Muine_Main.html
+++ b/Muine_Main.html
@@ -14,7 +14,7 @@
     </nav>
     <h1>Вступление</h1>
     <p>Приветствую тебя, дорогой читатель. Меня зовут Алексей, я хочу расскать тебе о том, что же такое Муйне и стоит ли сюда ехать.
-        Мы поговорим о достопримечательностях, досуге, публике, ценах, работе, вьетнамцах и подведем итоге, кому и зачем стоит или не стоит сюда ехать.
+        Мы поговорим о достопримечательностях, досуге, публике, ценах, работе, вьетнамцах и подведем итог, кому и зачем стоит или не стоит сюда ехать.
     </p>
     <h1>Плюсы</h1>
     <h2>Достопримечательности</h2>
@@ -37,5 +37,38 @@
             <li>Бухта Виньхи</li>
             <li>Сайгон + Меконг + тунели Кучи(лучше всего перед вылетом)</li>
         </ul>
+    </p>
+    <h2>Досуг</h2>
+    <p>Сёрфинг и кайт-сёрвинг. В основном, сюда едут именно ради этого. Стабильно дует ветер, нет дождей, приходят волны до 2-3 метров (для новичка больше и не надно). Кайт-сёрфинг удовольствие подороже, а вот для обычного сёрфинга вам достаточно
+        взять себе 1-2 урока по 20-30$, после чего приобрести доску за 100-150$ и всё, можно бежать ловить волны.</p>
+    <p>Бары, клубы, рестораны, Бо Ке. С первыми тремя пунктами всё ясно, на последнем остановимся подробнее. Бо Ке - это кафе, в котором в аквариумах содержат живую рыбу и морепродукты, под заказ их вам готовят. Стоит это приемлемых денег, таких заведений очень много</p>
+    <p>Спортивный зал и йога. В регионе достаточно жарко, много дешевых овощей и фруктов, что способствует похудению, так почему бы организму не помочь и не привести себя в форму.</p>
+    <h2>Публика</h2>
+    <p>Если вы собираетесь приехать как турист на 10-14 дней, вам будет не до этого, листайте дальше.
+        Если же вы собираетесь провести в Муйне весь сезон (с декабря по февраль), этот пункт становится важным для вас. Пообщаться можно с "локалами", то есть теми, кто здесь так же проживает, они достаточно дружелюбные, позитивные.
+        Из туристов лучше общаться с иностранцами (если знание английского позволяет). Они также охотно идут на контакт, ведь, в отличии от вас, им здесь совсем общаться не с кем: кругом вьетнамцы и русские, по-английски почти никто не говорит.
+        С нашими соотечественниками, как правило, диалог происходит по схеме: "О! Земляки! А вы откуда?! - ... - А я из Читы, угостите сигареткой".
+    </p>
+    <h2>Цены</h2>
+    <ul>
+        <li>Жильё: 50-150$/мес</li>
+        <li>Аренда мопеда: 50-100$/мес</li>
+        <li>Питание: 5-15$/день(если готовить самому, можно уложиться в 2-3$)</li>
+        <li>Экскурсии: 30-40$ однодневные, 90-110$ двухдневные</li>
+        <li>Самостоятельные перелет: около 350$ в одну сторону</li>
+        <li>Пакетные туры на 10-14 дней с проживанием и завтраками - 600-1200$ с человека</li>
+    </ul>
+    <h1>Минусы</h1>
+    <h2>Работа</h2>
+    <p>Работы здесь не много. Варианты сводятся, как правило, к промоутерам или обслуживающему персоналу в кафе и гостиницах</p>
+    <p>Можно подрабатывать в качестве "ИП", оказывая услуги по обучению сёрфингу, аренде мото техники, фитнес-тренер и т.п.</p>
+    <p>Заработные платы и график - вот, в чем глаыне проблемы. Зарплаты здесь по 200-300$, а работать за эти деньги придётся по 5-6 дней в неделю, оно вам надо?</p>
+    <p>Идеальный вариант избежать зависимости своего бюджета от происходящего вокруг: удалённая работа или личные накопления</p>
+    <h2>Вьетнамцы</h2>
+    <p>Находясь в их стране, вам придётся с ними мириться. Начнём с грустного, вьетнамцы в туристической зоне.
+        Эти люди будут видеть в вас мешок с деньгами: нигде не написаны цены, а если вы их знаете и ходите в магазин каждый день, вас всё равно будут пытаться обмануть.
+        95% того, что сделано руками этих людей (в понимании европейцев) будет некрасивым, невкусным, колхозным, некачественным и т.д. Чистота их тоже не особо волнует. Видишь что-то хорошее - скорее всего это сделали не местные.
+        Кругом сплошное "нельзя", "не делай", "не трогай", "просто дай нам денег и уходи". А уж работать с ними - это отдельная песня: враньё и палки в колёсах на каждом шагу.
+        
     </p>
 </html>
