--- a/Muine_Main.html
+++ b/Muine_Main.html
@@ -69,6 +69,25 @@
         Эти люди будут видеть в вас мешок с деньгами: нигде не написаны цены, а если вы их знаете и ходите в магазин каждый день, вас всё равно будут пытаться обмануть.
         95% того, что сделано руками этих людей (в понимании европейцев) будет некрасивым, невкусным, колхозным, некачественным и т.д. Чистота их тоже не особо волнует. Видишь что-то хорошее - скорее всего это сделали не местные.
         Кругом сплошное "нельзя", "не делай", "не трогай", "просто дай нам денег и уходи". А уж работать с ними - это отдельная песня: враньё и палки в колёсах на каждом шагу.
-        
+        Вне туристической зоны местные жители ведут себя нормально: улыбаются, интересуются, откуда ты приехал, предлагают что-то попробовать, готовы помочь. Есть лишь два "но": эта зона не зря не является туристической, там ничего интересного, как правило; они практически не говорят по-английски, а жестами много не обсудишь.
     </p>
+    <h1>Итоги</h1>
+    <p>Климат я не стал относить ни к плюсам, ни к минусам: дело вкуса. В сезон здесь +30, нет дождей, влажность высокая, но не драмматическая - 50-70%.
+        Так вот, если климат вам подходит, можно задуматься о поездке в Муйне.
+    </p>
+<p>Стоит ехать</p>
+<ul>
+    <li>Желающим научиться кататься на сёрфе, кайте за умеренные деньги</li>
+    <li>Удалёнщикам, которым захотелось экзотики</li>
+    <li>Туристам, которые хотят посмотреть Азию дёшево</li>
+    <li>Интересующимся историей Вьетнама и их воин(есть, что изучить)</li>
+</ul>
+    <p>Не стоит ехать</p>
+<ul>
+    <li>Людям, которые плохо переносят жару</li>
+    <li>Тем, для кого важен сервис, качество, обслуживание</li>
+    <li>Последователям Ильи Варламова: тут кругом всё в банерах, некрасивых постройках и местами грязно</li>
+    <li>Любителям пляжного отдыха: из-за волн купаться не очень комфортно</li>
+</ul>
+
 </html>
