--- a/Muine_Main.html
+++ b/Muine_Main.html
@@ -3,23 +3,20 @@
 <head>
 <meta charset="utf=8">
     <title>Муйне, Вьетнам</title>
-    <link href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
-    <header>"Муйне - туристическая деревня". Рассказ в виде сайта. Алексей Золотарский.</header>
-    <nav>
-        <ul>
-            <li>Плюсы</li>
-            <li>Минусы</li>
-        </ul>
-    </nav>
+<body>
+    
+<header>"Муйне - туристическая деревня."<br> Рассказ в виде сайта. Алексей Золотарский.</header>
+
     <h1>Вступление</h1>
     <p>Приветствую тебя, дорогой читатель. Меня зовут Алексей, я хочу расскать тебе о том, что же такое Муйне и стоит ли сюда ехать.
         Мы поговорим о достопримечательностях, досуге, публике, ценах, работе, вьетнамцах и подведем итог, кому и зачем стоит или не стоит сюда ехать.
     </p>
     <h1>Плюсы</h1>
     <h2>Достопримечательности</h2>
-    <p>По близости
-        <ul>
+        <ul><div class="underline">По близости</div>
            <li>Белые и красные песчаные дюны</li>
            <li>Пляж Хон Ром</li>
            <li>Волнорез</li>
@@ -27,25 +24,32 @@
            <li>Рыбацкая деревня</li>
            <li>Ручей фей</li>
         </ul>
-    </p>
-    <p>Можно съездить на мопеде или на экскурсию
-        <ul>
-            <li>Гора таку и статуя лежачего Будды</li>
+        <div id="galery"><img src="files/237muinesites1.jpg"><img src="files/237muinesites2.jpg">
+        <img src="files/237muinesites3.jpg"><img src="files/237muinesites4.jpg"><img src="files/237muinesites5.jpg"><img src="files/237muinesites6.jpg">
+        <img src="files/949560_sea-wave_1920x1200_h.jpg"><img src="files/mui-ne-fishing-village.jpg">
+        <ul><div class="underline">Можно съездить на мопеде или на экскурсию</div>
+            <li>Гора Таку и статуя лежачего Будды</li>
             <li>Город Нячанг</li>
             <li>Город "Вечной весны" Далат, расположенный в горах</li>
             <li>Баолок: водопады Дамбри и Дасара</li>
             <li>Бухта Виньхи</li>
-            <li>Сайгон + Меконг + тунели Кучи(лучше всего перед вылетом)</li>
+            <li>Сайгон + Меконг + туннели Кучи(лучше всего перед вылетом)</li>
         </ul>
-    </p>
+        <div id="galery">
+            <img src="files/2/04122016047.jpg"><img src="files/2/237muinesites7.jpg"><img src="files/2/51419_lg_1.jpeg">
+            <img src="files/2/8_900_900_fixed.jpg"><img src="files/2/c2be3493ce42ee658842d93c6d54529d.jpg"><img src="files/2/D-u3pwJW4AAFvpo.jpg_large">
+            <img src="files/2/linh-phuoc-pa-go-da.jpg"><img src="files/2/vinh-hy-vntour.jpg"><img src="files/2/Гора-Таку-лежачий-будда-Фантьет.jpg">
+        </div>
     <h2>Досуг</h2>
     <p>Сёрфинг и кайт-сёрвинг. В основном, сюда едут именно ради этого. Стабильно дует ветер, нет дождей, приходят волны до 2-3 метров (для новичка больше и не надно). Кайт-сёрфинг удовольствие подороже, а вот для обычного сёрфинга вам достаточно
         взять себе 1-2 урока по 20-30$, после чего приобрести доску за 100-150$ и всё, можно бежать ловить волны.</p>
     <p>Бары, клубы, рестораны, Бо Ке. С первыми тремя пунктами всё ясно, на последнем остановимся подробнее. Бо Ке - это кафе, в котором в аквариумах содержат живую рыбу и морепродукты, под заказ их вам готовят. Стоит это приемлемых денег, таких заведений очень много</p>
     <p>Спортивный зал и йога. В регионе достаточно жарко, много дешевых овощей и фруктов, что способствует похудению, так почему бы организму не помочь и не привести себя в форму.</p>
+    <div id="galery"><img src="files/3/boke-mujne-moreprodukty-vetnam-02.jpg"><img src="files/3/look.com.ua-109453.jpg"><img src="files/3/maxresdefault.jpg"><img src="files/3/s1200.jpg"><img src="files/3/1-the-sailing-bay-beach-resort-phan-thiet-mui-ne.jpg.1400x500_q85_crop.jpg">
+    </div>
     <h2>Публика</h2>
     <p>Если вы собираетесь приехать как турист на 10-14 дней, вам будет не до этого, листайте дальше.
-        Если же вы собираетесь провести в Муйне весь сезон (с декабря по февраль), этот пункт становится важным для вас. Пообщаться можно с "локалами", то есть теми, кто здесь так же проживает, они достаточно дружелюбные, позитивные.
+        Если же вы собираетесь провести в Муйне весь сезон (с декабря по февраль), этот пункт становится важным для вас. Пообщаться можно с "локалами", то есть теми, кто здесь также проживает длительное время, они достаточно дружелюбные, позитивные.
         Из туристов лучше общаться с иностранцами (если знание английского позволяет). Они также охотно идут на контакт, ведь, в отличии от вас, им здесь совсем общаться не с кем: кругом вьетнамцы и русские, по-английски почти никто не говорит.
         С нашими соотечественниками, как правило, диалог происходит по схеме: "О! Земляки! А вы откуда?! - ... - А я из Читы, угостите сигареткой".
     </p>
@@ -75,19 +79,17 @@
     <p>Климат я не стал относить ни к плюсам, ни к минусам: дело вкуса. В сезон здесь +30, нет дождей, влажность высокая, но не драмматическая - 50-70%.
         Так вот, если климат вам подходит, можно задуматься о поездке в Муйне.
     </p>
-<p>Стоит ехать</p>
-<ul>
+<ul><div class="underline">Стоит ехать</div>
     <li>Желающим научиться кататься на сёрфе, кайте за умеренные деньги</li>
     <li>Удалёнщикам, которым захотелось экзотики</li>
     <li>Туристам, которые хотят посмотреть Азию дёшево</li>
     <li>Интересующимся историей Вьетнама и их воин(есть, что изучить)</li>
 </ul>
-    <p>Не стоит ехать</p>
-<ul>
+<ul><div class="underline">Не стоит ехать</div>
     <li>Людям, которые плохо переносят жару</li>
     <li>Тем, для кого важен сервис, качество, обслуживание</li>
     <li>Последователям Ильи Варламова: тут кругом всё в банерах, некрасивых постройках и местами грязно</li>
     <li>Любителям пляжного отдыха: из-за волн купаться не очень комфортно</li>
 </ul>
-
+</body>>
 </html>
