--- a/Muine_Main.html
+++ b/Muine_Main.html
@@ -9,12 +9,19 @@
 <body>
     
 <header>"Муйне - туристическая деревня."<br> Рассказ в виде сайта. Алексей Золотарский.</header>
-
+<aside>
+    <nav><h2>Навигация</h2>
+        <a href="#plus">Плюсы</a><br>
+        <a href="#minus">Минусы</a><br>
+        <a href="#itog">Итоги</a>
+    </nav>
+</aside>
     <h1>Вступление</h1>
     <p>Приветствую тебя, дорогой читатель. Меня зовут Алексей, я хочу расскать тебе о том, что же такое Муйне и стоит ли сюда ехать.
         Мы поговорим о достопримечательностях, досуге, публике, ценах, работе, вьетнамцах и подведем итог, кому и зачем стоит или не стоит сюда ехать.
     </p>
-    <h1>Плюсы</h1>
+   
+    <h1 id="plus">Плюсы</h1>
     <h2>Достопримечательности</h2>
         <ul><div class="underline">По близости</div>
            <li>Белые и красные песчаные дюны</li>
@@ -55,14 +62,17 @@
     </p>
     <h2>Цены</h2>
     <ul>
-        <li>Жильё: 50-150$/мес</li>
+        <li>Жильё: 50-150$/мес(на фото guest hause за 150$)</li>
         <li>Аренда мопеда: 50-100$/мес</li>
         <li>Питание: 5-15$/день(если готовить самому, можно уложиться в 2-3$)</li>
         <li>Экскурсии: 30-40$ однодневные, 90-110$ двухдневные</li>
         <li>Самостоятельные перелет: около 350$ в одну сторону</li>
         <li>Пакетные туры на 10-14 дней с проживанием и завтраками - 600-1200$ с человека</li>
     </ul>
-    <h1>Минусы</h1>
+    <div id="galery">
+        <img src="files/5/22748620.jpg"><img src="files/5/57085911.jpg"><img src="files/5/content_hotel_56fced0d166533.86566027.jpg">
+    </div>
+    <h1 id="minus">Минусы</h1>
     <h2>Работа</h2>
     <p>Работы здесь не много. Варианты сводятся, как правило, к промоутерам или обслуживающему персоналу в кафе и гостиницах</p>
     <p>Можно подрабатывать в качестве "ИП", оказывая услуги по обучению сёрфингу, аренде мото техники, фитнес-тренер и т.п.</p>
@@ -75,7 +85,11 @@
         Кругом сплошное "нельзя", "не делай", "не трогай", "просто дай нам денег и уходи". А уж работать с ними - это отдельная песня: враньё и палки в колёсах на каждом шагу.
         Вне туристической зоны местные жители ведут себя нормально: улыбаются, интересуются, откуда ты приехал, предлагают что-то попробовать, готовы помочь. Есть лишь два "но": эта зона не зря не является туристической, там ничего интересного, как правило; они практически не говорят по-английски, а жестами много не обсудишь.
     </p>
-    <h1>Итоги</h1>
+    <div id="galery">
+        <img src="files/4/33_Na-ulitse-Muyne.jpg">, <img src="files/4/62447-Ho-Chi-Minh-City.jpg"><img src="files/4/D_BDWwiXkAAJDL7.jpg"><img src="files/4/DSC_0091.jpg">
+        <img src="files/4/englisj.png"><img src="files/4/fa1e172596_1000.jpg">
+    </div>
+    <h1 id="itog">Итоги</h1>
     <p>Климат я не стал относить ни к плюсам, ни к минусам: дело вкуса. В сезон здесь +30, нет дождей, влажность высокая, но не драмматическая - 50-70%.
         Так вот, если климат вам подходит, можно задуматься о поездке в Муйне.
     </p>
@@ -91,5 +105,6 @@
     <li>Последователям Ильи Варламова: тут кругом всё в банерах, некрасивых постройках и местами грязно</li>
     <li>Любителям пляжного отдыха: из-за волн купаться не очень комфортно</li>
 </ul>
-</body>>
+<footer>Решать вам, удачи!</footer>
+</body>
 </html>
